refactor: comprehensive code quality pass — bugs, perf, complexity, duplication
Bugs fixed:
- FakerCache: Random equality check used object identity (.equals), always triggering
  the stale-instance warning; changed to reference comparison (!=)
- AvroSerializer.sanitizeFieldName: added empty-string guard before charAt(0) to
  prevent IndexOutOfBoundsException on all-special-character field names
- ProtobufSerializer.formatMapAsString: replaced hand-rolled {k:v} builder with
  Jackson serialization to correctly handle escaping
- IntegerGenerator: replaced biased modulo fallback with rejection sampling for
  uniform distribution over large ranges
- DateGenerator, TimestampGenerator: clamped nextDouble() result with Math.min to
  make the end of range reachable (truly inclusive bounds)
- FileDestination: replaced unchecked (CsvSerializer) cast with instanceof pattern match

Performance:
- DataGeneratorFactory.create(): O(n) list scan replaced with O(1) EnumMap + HashMap lookup
- AbstractYamlParser: ObjectMapper and Validator promoted to static final singletons
- DatafakerRegistry.listTypes(): Set.copyOf() replaced with Collections.unmodifiableSet()
- HttpSchemaRegistryClient: shared static HttpClient instead of one per instance
- RetryPolicy: exponential backoff delay capped at 30s to prevent long overflow

Complexity reduced:
- TypeParser.parse(): extracted five private helpers (parsePrimitive, parseEnum,
  parseRefCount, parseRefRange, parseArray); main method reduced from 98 to ~15 lines
- SeedResolver.resolveRemote(): replaced double-checked locking with LazyHolder pattern;
  extracted applyAuth() with switch expression
- DatabaseDestination: extracted buildInsertSql() eliminating duplicated INSERT SQL
  construction between flat and nested modes

Duplication eliminated:
- BiometricValidationUtils: extracted checkRequiredFields() shared by FaceImageRules
  and FingerprintMinutiaeRules
- CsvSerializer: extracted writeCsv(String[]) removing duplicate StringWriter+CSV